Bug 1328169 - Enable mediaconduit_unittests again; r=jesup

This removes the disabled TestDummyVideoWithTransport. It was disabled because
it was too flaky to run in automation. It is now broken locally as well due to
threading changes. Given that we can test whether the VideoConduit sends video
well enough in mochitests, I don't see any reason to invest time in fixing it
here, given that it is unlikely to work well in automation anyway.

This also rewrites the MaxFs tests to avoid sending a frame as that results in
a shutdown hang when run in automation.

I have checked that the TestDummyAudioWithTransport continues to work locally,
but I've left it disabled.

MozReview-Commit-ID: AmmUuATxAJa

--HG--
extra : rebase_source : 6416dfff78bc56d0fde131fd1eee40a7dfd597d5