media/webrtc/signaling/gtest/mediaconduit_unittests.cpp
@@ -5,25 +5,22 @@
 #include <iostream>
 #include <string>
 #include <fstream>
-#include <unistd.h>
 #include <vector>
 #include <math.h>
 
 using namespace std;
 
-#include "mozilla/SyncRunnable.h"
-#include "mozilla/UniquePtr.h"
 #include <MediaConduitInterface.h>
-#include "nsIEventTarget.h"
-#include "nsThreadUtils.h"
+#include <VideoConduit.h>
+#include "mozilla/UniquePtr.h"
+#include "nss.h"
 #include "runnable_utils.h"
 #include "signaling/src/common/EncodingConstraints.h"
 
 #define GTEST_HAS_RTTI 0
 #include "gtest/gtest.h"
 
-//Video Frame Color
-const int COLOR = 0x80; //Gray
+const uint32_t SSRC = 1;
 
 //MWC RNG of George Marsaglia
 //taken from xiph.org
@@ -34,81 +31,6 @@ static inline int32_t fast_rand(void)
   Rw=18000*(Rw&65535)+(Rw>>16);
   return (Rz<<16)+Rw;
 }
-
-/**
-  * Global structure to store video test results.
-  */
-struct VideoTestStats
-{
- int numRawFramesInserted;
- int numFramesRenderedSuccessfully;
- int numFramesRenderedWrongly;
-};
-
-VideoTestStats vidStatsGlobal={0,0,0};
-
-/**
- * A Dummy Video Conduit Tester.
- * The test-case inserts a 640*480 grey imagerevery 33 milliseconds
- * to the video-conduit for encoding and transporting.
- */
-
-class VideoSendAndReceive
-{
-public:
-  VideoSendAndReceive():width(640),
-                        height(480),
-			rate(30)
-  {
-  }
-
-  ~VideoSendAndReceive()
-  {
-  }
-
-  void SetDimensions(int w, int h)
-  {
-    width = w;
-    height = h;
-  }
-  void SetRate(int r) {
-    rate = r;
-  }
-  void Init(RefPtr<mozilla::VideoSessionConduit> aSession)
-  {
-        mSession = aSession;
-        mLen = ((width * height) * 3 / 2);
-        mFrame = mozilla::MakeUnique<uint8_t[]>(mLen);
-        memset(mFrame.get(), COLOR, mLen);
-        numFrames = 121;
-  }
-
-  void GenerateAndReadSamples()
-  {
-    do
-    {
-      mSession->SendVideoFrame(reinterpret_cast<unsigned char*>(mFrame.get()),
-                                mLen,
-                                width,
-                                height,
-                                mozilla::kVideoI420,
-                                0);
-      PR_Sleep(PR_MillisecondsToInterval(1000/rate));
-      vidStatsGlobal.numRawFramesInserted++;
-      numFrames--;
-    } while(numFrames >= 0);
-  }
-
-private:
-RefPtr<mozilla::VideoSessionConduit> mSession;
-mozilla::UniquePtr<uint8_t[]> mFrame;
-int mLen;
-int width, height;
-int rate;
-int numFrames;
-};
-
-
 
 /**
  * A Dummy AudioConduit Tester
@@ -344,76 +266,6 @@ void AudioSendAndReceive::GenerateAndReadSamples()
    fclose(outFile);
 }
 
-/**
- * Dummy Video Target for the conduit
- * This class acts as renderer attached to the video conduit
- * As of today we just verify if the frames rendered are exactly
- * the same as frame inserted at the first place
- */
-class DummyVideoTarget: public mozilla::VideoRenderer
-{
-public:
-  DummyVideoTarget()
-  {
-  }
-
-  virtual ~DummyVideoTarget()
-  {
-  }
-
-
-  void RenderVideoFrame(const unsigned char* buffer,
-                        size_t buffer_size,
-                        uint32_t y_stride,
-                        uint32_t cbcr_stride,
-                        uint32_t time_stamp,
-                        int64_t render_time,
-                        const mozilla::ImageHandle& handle) override
-  {
-    RenderVideoFrame(buffer, buffer_size, time_stamp, render_time, handle);
-  }
-
-  void RenderVideoFrame(const unsigned char* buffer,
-                        size_t buffer_size,
-                        uint32_t time_stamp,
-                        int64_t render_time,
-                        const mozilla::ImageHandle& handle) override
- {
-  //write the frame to the file
-  if(VerifyFrame(buffer, buffer_size) == 0)
-  {
-      vidStatsGlobal.numFramesRenderedSuccessfully++;
-  } else
-  {
-      vidStatsGlobal.numFramesRenderedWrongly++;
-  }
- }
-
- void FrameSizeChange(unsigned int, unsigned int, unsigned int) override
- {
-    //do nothing
- }
-
- //This is hardcoded to check if the contents of frame is COLOR
- // as we set while sending.
- int VerifyFrame(const unsigned char* buffer, unsigned int buffer_size)
- {
-    int good = 0;
-    for(int i=0; i < (int) buffer_size; i++)
-    {
-      if(buffer[i] == COLOR)
-      {
-        ++good;
-      }
-      else
-      {
-        --good;
-      }
-    }
-   return 0;
- }
-
-};
 
 /**
  *  Webrtc Audio and Video External Transport Class
@@ -438,12 +290,13 @@ public:
   virtual nsresult SendRtpPacket(const uint8_t* data, size_t len)
   {
     ++numPkts;
+
     if(mAudio)
     {
-      mOtherAudioSession->ReceivedRTPPacket(data,len);
+      mOtherAudioSession->ReceivedRTPPacket(data,len,SSRC);
     } else
     {
-      mOtherVideoSession->ReceivedRTPPacket(data,len);
+      mOtherVideoSession->ReceivedRTPPacket(data,len,SSRC);
     }
     return NS_OK;
   }
@@ -502,6 +355,8 @@ class TransportConduitTest : public ::testing::Test
     //input and output file names
     iAudiofilename = "input.wav";
     oAudiofilename = "recorded.wav";
+
+    NSS_NoDB_Init(nullptr);
   }
 
   ~TransportConduitTest()
@@ -575,94 +430,17 @@ class TransportConduitTest : public ::testing::Test
     cerr << "   ******************************************************** " << endl;
   }
 
-  //2. Dump audio samples to dummy external transport
-  void TestDummyVideoAndTransport(const char *source_file = nullptr)
-  {
-    int err = 0;
-    //get pointer to VideoSessionConduit
-    mVideoSession = VideoSessionConduit::Create();
-    if( !mVideoSession )
-      ASSERT_NE(mVideoSession, (void*)nullptr);
-
-    // This session is for other one
-    mVideoSession2 = VideoSessionConduit::Create();
-    if( !mVideoSession2 )
-      ASSERT_NE(mVideoSession2,(void*)nullptr);
-
-    mVideoRenderer = new DummyVideoTarget();
-    ASSERT_NE(mVideoRenderer, (void*)nullptr);
-
-    WebrtcMediaTransport* xport = new WebrtcMediaTransport();
-    ASSERT_NE(xport, (void*)nullptr);
-    xport->SetVideoSession(mVideoSession,mVideoSession2);
-    mVideoTransport = xport;
-
-    // attach the transport and renderer to video-conduit
-    err = mVideoSession2->AttachRenderer(mVideoRenderer);
-    ASSERT_EQ(mozilla::kMediaConduitNoError, err);
-    err = mVideoSession->SetTransmitterTransport(mVideoTransport);
-    ASSERT_EQ(mozilla::kMediaConduitNoError, err);
-    err = mVideoSession2->SetReceiverTransport(mVideoTransport);
-    ASSERT_EQ(mozilla::kMediaConduitNoError, err);
-
-    mozilla::EncodingConstraints constraints;
-    //configure send and recv codecs on theconduit
-    mozilla::VideoCodecConfig cinst1(120, "VP8", constraints);
-    mozilla::VideoCodecConfig cinst2(124, "I420", constraints);
-
-
-    std::vector<mozilla::VideoCodecConfig* > rcvCodecList;
-    rcvCodecList.push_back(&cinst1);
-    rcvCodecList.push_back(&cinst2);
-
-    err = mVideoSession->ConfigureSendMediaCodec(&cinst1);
-
-    ASSERT_EQ(mozilla::kMediaConduitNoError, err);
-    err = mVideoSession->StartTransmitting();
-    ASSERT_EQ(mozilla::kMediaConduitNoError, err);
-
-    err = mVideoSession2->ConfigureSendMediaCodec(&cinst1);
-    err = mVideoSession2->StartTransmitting();
-    ASSERT_EQ(mozilla::kMediaConduitNoError, err);
-
-    ASSERT_EQ(mozilla::kMediaConduitNoError, err);
-    err = mVideoSession2->ConfigureRecvMediaCodecs(rcvCodecList);
-    ASSERT_EQ(mozilla::kMediaConduitNoError, err);
-
-    //start generating samples
-    cerr << "   *************************************************" << endl;
-    cerr << "    Starting the Video Sample Generation " << endl;
-    cerr << "   *************************************************" << endl;
-    videoTester.Init(mVideoSession);
-    videoTester.GenerateAndReadSamples();
-
-    cerr << "   **************************************************" << endl;
-    cerr << "    Done With The Testing  " << endl;
-    cerr << "    VIDEO TEST STATS  "  << endl;
-    cerr << "    Num Raw Frames Inserted: "<<
-                                        vidStatsGlobal.numRawFramesInserted << endl;
-    cerr << "    Num Frames Successfully Rendered: "<<
-                                        vidStatsGlobal.numFramesRenderedSuccessfully << endl;
-    cerr << "    Num Frames Wrongly Rendered: "<<
-                                        vidStatsGlobal.numFramesRenderedWrongly << endl;
-
-    cerr << "    Done With The Testing  " << endl;
-
-    cerr << "   **************************************************" << endl;
-
-    ASSERT_EQ(0, vidStatsGlobal.numFramesRenderedWrongly);
-    ASSERT_EQ(vidStatsGlobal.numRawFramesInserted,
-		          vidStatsGlobal.numFramesRenderedSuccessfully);
-  }
-
- void TestVideoConduitCodecAPI()
+  void TestVideoConduitCodecAPI()
   {
     int err = 0;
     RefPtr<mozilla::VideoSessionConduit> videoSession;
     //get pointer to VideoSessionConduit
-    videoSession = VideoSessionConduit::Create();
+    videoSession = VideoSessionConduit::Create(WebRtcCallWrapper::Create());
     if( !videoSession )
       ASSERT_NE(videoSession, (void*)nullptr);
+
+    std::vector<unsigned int> ssrcs = {SSRC};
+    videoSession->SetLocalSSRCs(ssrcs);
 
     //Test Configure Recv Codec APIS
     cerr << "   *************************************************" << endl;
@@ -672,20 +450,28 @@ class TransportConduitTest : public ::testing::Test
     std::vector<mozilla::VideoCodecConfig* > rcvCodecList;
 
     //Same APIs
+    mozilla::EncodingConstraints constraints;
+    mozilla::VideoCodecConfig cinst1(120, "VP8", constraints);
+    VideoCodecConfig::SimulcastEncoding encoding;
+    cinst1.mSimulcastEncodings.push_back(encoding);
+
+    // This test is disabled because with the current code this will trigger an
+    // assertion in video_receive_stream.cc because we this results in a
+    // duplicate payload type for different encoders.
+    /*
     cerr << "   *************************************************" << endl;
     cerr << "    1. Same Codec (VP8) Repeated Twice " << endl;
     cerr << "   *************************************************" << endl;
 
-    mozilla::EncodingConstraints constraints;
-    mozilla::VideoCodecConfig cinst1(120, "VP8", constraints);
     mozilla::VideoCodecConfig cinst2(120, "VP8", constraints);
+    cinst2.mSimulcastEncodings.push_back(encoding);
     rcvCodecList.push_back(&cinst1);
     rcvCodecList.push_back(&cinst2);
     err = videoSession->ConfigureRecvMediaCodecs(rcvCodecList);
     EXPECT_EQ(err, mozilla::kMediaConduitNoError);
     rcvCodecList.pop_back();
     rcvCodecList.pop_back();
-
+    */
 
     cerr << "   *************************************************" << endl;
     cerr << "    2. Codec With Invalid Payload Names " << endl;
@@ -694,7 +480,9 @@ class TransportConduitTest : public ::testing::Test
     cerr << "   Setting payload 2 with name of zero length" << endl;
 
     mozilla::VideoCodecConfig cinst3(124, "I4201234tttttthhhyyyy89087987y76t567r7756765rr6u6676", constraints);
+    cinst3.mSimulcastEncodings.push_back(encoding);
     mozilla::VideoCodecConfig cinst4(124, "", constraints);
+    cinst4.mSimulcastEncodings.push_back(encoding);
 
     rcvCodecList.push_back(&cinst3);
     rcvCodecList.push_back(&cinst4);
@@ -709,7 +497,7 @@ class TransportConduitTest : public ::testing::Test
     cerr << "    3. Null Codec Parameter  " << endl;
     cerr << "   *************************************************" << endl;
 
-    rcvCodecList.push_back(0);
+    rcvCodecList.push_back(nullptr);
 
     err = videoSession->ConfigureRecvMediaCodecs(rcvCodecList);
     EXPECT_TRUE(err != mozilla::kMediaConduitNoError);
@@ -722,7 +510,6 @@ class TransportConduitTest : public ::testing::Test
     cerr << "   *************************************************" << endl;
     cerr << "    1. Same Codec (VP8) Repeated Twice " << endl;
     cerr << "   *************************************************" << endl;
-
 
     err = videoSession->ConfigureSendMediaCodec(&cinst1);
     EXPECT_EQ(mozilla::kMediaConduitNoError, err);
@@ -760,20 +547,28 @@ class TransportConduitTest : public ::testing::Test
   }
 
   // Calculate new resolution for sending video by applying max-fs constraint.
-  void GetVideoResolutionWithMaxFs(int orig_width, int orig_height, int max_fs,
-                                   int *new_width, int *new_height)
+  void GetVideoResolutionWithMaxFs(unsigned short orig_width,
+                                   unsigned short orig_height,
+                                   int max_fs,
+                                   unsigned short &new_width,
+                                   unsigned short &new_height)
   {
     int err = 0;
 
     // Get pointer to VideoSessionConduit.
-    mVideoSession = VideoSessionConduit::Create();
+    mVideoSession = VideoSessionConduit::Create(WebRtcCallWrapper::Create());
     if( !mVideoSession )
       ASSERT_NE(mVideoSession, (void*)nullptr);
+
+    std::vector<unsigned int> ssrcs = {SSRC};
+    mVideoSession->SetLocalSSRCs(ssrcs);
 
     mozilla::EncodingConstraints constraints;
     constraints.maxFs = max_fs;
     // Configure send codecs on the conduit.
     mozilla::VideoCodecConfig cinst1(120, "VP8", constraints);
+    VideoCodecConfig::SimulcastEncoding encoding;
+    cinst1.mSimulcastEncodings.push_back(encoding);
 
     err = mVideoSession->ConfigureSendMediaCodec(&cinst1);
     ASSERT_EQ(mozilla::kMediaConduitNoError, err);
@@ -783,33 +578,23 @@ class TransportConduitTest : public ::testing::Test
     // Send one frame.
     MOZ_ASSERT(!(orig_width & 1));
     MOZ_ASSERT(!(orig_height & 1));
-    int len = ((orig_width * orig_height) * 3 / 2);
-    uint8_t* frame = (uint8_t*) malloc(len);
-
-    memset(frame, COLOR, len);
-    mVideoSession->SendVideoFrame((unsigned char*)frame,
-                                  len,
-                                  orig_width,
-                                  orig_height,
-                                  mozilla::kVideoI420,
-                                  0);
-    free(frame);
 
     // Get the new resolution as adjusted by the max-fs constraint.
-    *new_width = mVideoSession->SendingWidth();
-    *new_height = mVideoSession->SendingHeight();
+    mVideoSession->SetSendingWidthAndHeight(orig_width, orig_height,
+                                            new_width, new_height);
   }
 
   void TestVideoConduitMaxFs()
   {
-    int orig_width, orig_height, width, height, max_fs;
+    unsigned short orig_width, orig_height, width, height;
+    int max_fs;
 
     // No limitation.
     cerr << "Test no max-fs limition" << endl;
     orig_width = 640;
     orig_height = 480;
     max_fs = 0;
-    GetVideoResolutionWithMaxFs(orig_width, orig_height, max_fs, &width, &height);
+    GetVideoResolutionWithMaxFs(orig_width, orig_height, max_fs, width, height);
     DumpMaxFs(orig_width, orig_height, max_fs, width, height);
     ASSERT_EQ(width, 640);
     ASSERT_EQ(height, 480);
@@ -819,7 +604,7 @@ class TransportConduitTest : public ::testing::Test
     orig_width = 640;
     orig_height = 480;
     max_fs = 300;
-    GetVideoResolutionWithMaxFs(orig_width, orig_height, max_fs, &width, &height);
+    GetVideoResolutionWithMaxFs(orig_width, orig_height, max_fs, width, height);
     DumpMaxFs(orig_width, orig_height, max_fs, width, height);
     ASSERT_EQ(width, 320);
     ASSERT_EQ(height, 240);
@@ -829,7 +614,7 @@ class TransportConduitTest : public ::testing::Test
     orig_width = 3072;
     orig_height = 100;
     max_fs = 300;
-    GetVideoResolutionWithMaxFs(orig_width, orig_height, max_fs, &width, &height);
+    GetVideoResolutionWithMaxFs(orig_width, orig_height, max_fs, width, height);
     DumpMaxFs(orig_width, orig_height, max_fs, width, height);
     ASSERT_EQ(width, 768);
     ASSERT_EQ(height, 25);
@@ -839,7 +624,7 @@ class TransportConduitTest : public ::testing::Test
     orig_width = 8;
     orig_height = 32;
     max_fs = 1;
-    GetVideoResolutionWithMaxFs(orig_width, orig_height, max_fs, &width, &height);
+    GetVideoResolutionWithMaxFs(orig_width, orig_height, max_fs, width, height);
     DumpMaxFs(orig_width, orig_height, max_fs, width, height);
     ASSERT_EQ(width, 4);
     ASSERT_EQ(height, 16);
@@ -849,7 +634,7 @@ class TransportConduitTest : public ::testing::Test
     orig_width = 4;
     orig_height = 50;
     max_fs = 1;
-    GetVideoResolutionWithMaxFs(orig_width, orig_height, max_fs, &width, &height);
+    GetVideoResolutionWithMaxFs(orig_width, orig_height, max_fs, width, height);
     DumpMaxFs(orig_width, orig_height, max_fs, width, height);
     ASSERT_EQ(width, 1);
     ASSERT_EQ(height, 16);
@@ -859,7 +644,7 @@ class TransportConduitTest : public ::testing::Test
     orig_width = 872;
     orig_height = 136;
     max_fs = 3;
-    GetVideoResolutionWithMaxFs(orig_width, orig_height, max_fs, &width, &height);
+    GetVideoResolutionWithMaxFs(orig_width, orig_height, max_fs, width, height);
     DumpMaxFs(orig_width, orig_height, max_fs, width, height);
     ASSERT_EQ(width, 48);
     ASSERT_EQ(height, 7);
@@ -869,7 +654,7 @@ class TransportConduitTest : public ::testing::Test
     orig_width = 160;
     orig_height = 8;
     max_fs = 5;
-    GetVideoResolutionWithMaxFs(orig_width, orig_height, max_fs, &width, &height);
+    GetVideoResolutionWithMaxFs(orig_width, orig_height, max_fs, width, height);
     DumpMaxFs(orig_width, orig_height, max_fs, width, height);
     ASSERT_EQ(width, 80);
     ASSERT_EQ(height, 4);
@@ -879,7 +664,7 @@ class TransportConduitTest : public ::testing::Test
     orig_width = 2;
     orig_height = 2;
     max_fs = 5;
-    GetVideoResolutionWithMaxFs(orig_width, orig_height, max_fs, &width, &height);
+    GetVideoResolutionWithMaxFs(orig_width, orig_height, max_fs, width, height);
     DumpMaxFs(orig_width, orig_height, max_fs, width, height);
     ASSERT_EQ(width, 2);
     ASSERT_EQ(height, 2);
@@ -893,7 +678,7 @@ class TransportConduitTest : public ::testing::Test
       orig_height = ((rand() % 2000) & ~1) + 2;
 
       GetVideoResolutionWithMaxFs(orig_width, orig_height, max_fs,
-                                  &width, &height);
+                                  width, height);
       if (max_fs > 0 &&
           ceil(width / 16.) * ceil(height / 16.) > max_fs) {
         DumpMaxFs(orig_width, orig_height, max_fs, width, height);
@@ -915,7 +700,6 @@ class TransportConduitTest : public ::testing::Test
   RefPtr<mozilla::VideoSessionConduit> mVideoSession2;
   RefPtr<mozilla::VideoRenderer> mVideoRenderer;
   RefPtr<mozilla::TransportInterface> mVideoTransport;
-  VideoSendAndReceive videoTester;
 
   std::string fileToPlay;
   std::string fileToRecord;
@@ -924,17 +708,10 @@ class TransportConduitTest : public ::testing::Test
 };
 
 
-// Test 1: Test Dummy External Xport
-// See Bug 1319121
+// Disabled, see Bug 1319121
 TEST_F(TransportConduitTest, DISABLED_TestDummyAudioWithTransport) {
   TestDummyAudioAndTransport();
 }
-
-// Test 2: Test Dummy External Xport
-// See Bug 1319121
-TEST_F(TransportConduitTest, DISABLED_TestDummyVideoWithTransport) {
-  TestDummyVideoAndTransport();
- }
 
 TEST_F(TransportConduitTest, TestVideoConduitCodecAPI) {
   TestVideoConduitCodecAPI();
